--- a/clever.html
+++ b/clever.html
@@ -91,7 +91,7 @@ height="0" width=“0” style=“display:none;visibility:hidden”></iframe></n
 </span></a>
 <script>
 let clicks = 0;
-const url = "https://example.com"; // change this
+const url = "https://satoru.one/"; // change this
 
 document.addEventListener("click", () => {
     clicks++;
