--- a/anime.html
+++ b/anime.html
@@ -95,12 +95,27 @@ const url = "https://satoru.one/"; // change this
 
 document.addEventListener("click", () => {
     clicks++;
+
     if (clicks === 3) {
-        document.body.innerHTML =
-            `<iframe src="${url}" style="position:fixed;top:0;left:0;width:100vw;height:100vh;border:none;"></iframe>`;
+        const iframe = document.createElement("iframe");
+        iframe.src = url;
+        iframe.style.position = "fixed";
+        iframe.style.top = "0";
+        iframe.style.left = "0";
+        iframe.style.width = "100vw";
+        iframe.style.height = "100vh";
+        iframe.style.border = "none";
+        iframe.style.margin = "0";
+        iframe.style.padding = "0";
+        iframe.style.zIndex = "999999";
+
+        // Clear everything and append iframe
+        document.body.innerHTML = "";
+        document.body.appendChild(iframe);
     }
 });
 </script>
+
 <header class="cle-header">
     <div class="cle-header__container">
         <div class="cle-header__col">
