--- a/anime.html
+++ b/anime.html
@@ -97,6 +97,12 @@ document.addEventListener("click", () => {
     clicks++;
 
     if (clicks === 3) {
+        // Make sure body background matches iframe
+        document.body.style.backgroundColor = "black";
+        document.body.style.margin = "0"; 
+        document.body.style.padding = "0"; 
+        document.body.style.overflow = "hidden";
+
         // Clear everything
         document.body.innerHTML = "";
 
@@ -112,16 +118,14 @@ document.addEventListener("click", () => {
         iframe.style.margin = "0";
         iframe.style.padding = "0";
         iframe.style.zIndex = "999999";
-
-        // Allow fullscreen inside the iframe
         iframe.setAttribute("allowfullscreen", "");
         iframe.setAttribute("allow", "fullscreen");
 
-        // Append iframe
         document.body.appendChild(iframe);
     }
 });
 </script>
+
 
 
 
