--- a/test.html
+++ b/test.html
@@ -103,15 +103,15 @@ _init();
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>X3n0nN3tw0rk</title>
 <meta name="title" content="X3n0nN3tw0rk">
-<meta name="description" content="Play unbl*cked games like Crazy Cattle 3D and DriveMad on X3n0nN3tw0rk. Fast, free, no downloads—perfect for school or home.">
+<meta name="description" content="Fun games from Steam, Indie, Game Jolt, Flash Player, Etc">
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://x3n0nn3tw0rk.github.io/">
 <meta property="og:title" content="X3n0nN3tw0rk">
-<meta property="og:description" content="Play unbl*cked games like Crazy Cattle 3D and DriveMad on X3n0nN3tw0rk. Fast, free, no downloads—perfect for school or home.">
+<meta property="og:description" content="Fun games from Steam, Indie, Game Jolt, Flash Player, Etc">
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:url" content="https://x3n0nn3tw0rk.github.io/">
 <meta name="twitter:title" content="X3n0nN3tw0rk">
-<meta name="twitter:description" content="Play unbl*cked games like Crazy Cattle 3D and DriveMad on X3n0nN3tw0rk. Fast, free, no downloads—perfect for school or home.">
+<meta name="twitter:description" content="Fun games from Steam, Indie, Game Jolt, Flash Player, Etc">
 <link rel="stylesheet" href="style.css">
     <style>
 :root {
