--- a/anime.html
+++ b/anime.html
@@ -31,7 +31,7 @@
 <script>
 const UIs = [
     "cloaks/clever.html",
-    "cloaks/schoology.html"
+    "cloaks/github.html"
 ];
 
 const randomUI = UIs[Math.floor(Math.random() * UIs.length)];
