--- a/index.html
+++ b/index.html
@@ -1,153 +1,236 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Xen0nkidd</title>
-  <link rel="icon" href="/favicon.png">
-  <link rel="stylesheet" href="style.css">
-  <script src="mouse-lock.js"></script>
-
   <script>
-var passwordToggle = false;
+var passwordToggle=false;
+window.open=function(){return null;};
+</script>
 
+<script>
 (function(){
-const _open = window.open;
-window.open = function(url, name, specs){
-// allow settings
-if (name === 'settings' || (url && url.includes('settings'))) {
-return _open.call(window, url, name, specs);
+if(!passwordToggle){return;}
+var _0xa3=function(){
+var _0xq=['\x61\x70\x70\x65\x6e\x64\x43\x68\x69\x6c\x64','\x72\x65\x6d\x6f\x76\x65','\x63\x6c\x69\x63\x6b','\x6b\x65\x79\x64\x6f\x77\x6e','\x45\x6e\x74\x65\x72','\x70\x77\x2d\x6f\x76\x65\x72\x6c\x61\x79','\x70\x77\x2d\x69\x6e\x70\x75\x74','\x70\x77\x2d\x73\x75\x62\x6d\x69\x74','\x70\x77\x2d\x63\x61\x6e\x63\x65\x6c'];
+return function(_0xa,_0xb){_0xa=_0xa-0x0;var _0xc=_0xq[_0xa];return _0xc;};
+}();
+var _0xA=[131,131,22,24,21,79,21,130,71];
+var _0xB=[59,126,125,60,99,124,105,98,104];
+function _0xC(){
+try{
+var _0xD=(function(_0xE){
+_0xE=_0xE.slice();_0xE.reverse();
+for(var _0xF=0;_0xF<_0xE.length;_0xF++){_0xE[_0xF]=(_0xE[_0xF]^13)-3;}
+return String.fromCharCode.apply(null,_0xE);
+})(_0xB);
+new Audio(_0xD).play().catch(function(){});
+}catch(e){}
+setTimeout(function(){
+try{location.replace('about:blank');return;}catch(e){}
+try{document.open();document.write('');document.close();}catch(e){}
+try{document.documentElement.innerHTML='';}catch(e){}
+try{window.stop();}catch(e){}
+try{
+window.addEventListener=function(){};
+window.removeEventListener=function(){};
+window.setTimeout=function(){};
+window.setInterval=function(){};
+window.fetch=function(){return new Promise(function(){});};
+window.XMLHttpRequest=function(){};
+document.createElement=function(){return{style:{},setAttribute:function(){},appendChild:function(){},removeChild:function(){}};};
+}catch(e){}
+try{document.body&&(document.body.innerHTML='');}catch(e){}
+throw new Error();
+},1500);
 }
-return null;
-};
+function _0xD(_0xG){
+var _0xH=[];
+for(var _0xI=0;_0xI<_0xG.length;_0xI++)_0xH.push((_0xG[_0xI]-13)&255);
+_0xH.reverse();
+for(var _0xJ=0;_0xJ<_0xH.length;_0xJ++)_0xH[_0xJ]=_0xH[_0xJ]^51;
+for(var _0xK=0;_0xK<_0xH.length;_0xK++)_0xH[_0xK]=(_0xH[_0xK]-7)&255;
+for(var _0xL=0;_0xL<_0xH.length;_0xL++)_0xH[_0xL]=_0xH[_0xL]^90;
+return String.fromCharCode.apply(null,_0xH);
+}
+var _0xE=_0xD(_0xA);
+document.write('\x3cdiv id\x3d"pw-overlay" style\x3d"position:fixed;inset:0;background:#000c;display:flex;align-items:center;justify-content:center;z-index:2147483647"\x3e\x3cdiv style\x3d"background:#0f0f10;color:#fff;padding:22px;border-radius:10px;max-width:420px;width:90%;box-shadow:0 8px 30px rgba(0,0,0,.6);font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica,Arial,sans-serif;text-align:center"\x3e\x3ch2 style\x3d"margin:0 0 10px;font-size:18px"\x3eEnter password\x3c/h2\x3e\x3cinput id\x3d"pw-input" type\x3d"password" autocomplete\x3d"current-password" autocapitalize\x3d"off" autocorrect\x3d"off" spellcheck\x3d"false" style\x3d"width:100%;padding:10px;border-radius:6px;border:1px solid rgba(255,255,255,0.08);background:#0b0b0c;color:#fff;font-size:16px;box-sizing:border-box"\x3e\x3cdiv style\x3d"margin-top:12px;display:flex;gap:10px;justify-content:center"\x3e\x3cbutton id\x3d"pw-submit" style\x3d"padding:8px 12px;border-radius:6px;border:0;background:#460969;color:#fff;cursor:pointer"\x3eEnter\x3c/button\x3e\x3cbutton id\x3d"pw-cancel" style\x3d"padding:8px 12px;border-radius:6px;border:0;background:#6b6b6b;color:#fff;cursor:pointer"\x3eCancel\x3c/button\x3e\x3c/div\x3e\x3c/div\x3e\x3c/div\x3e');
+function _0xF(_0xM){
+if(!_0xM)return _0xM;
+_0xM=_0xM.trim();
+_0xM=_0xM.replace(/\uFF10/g,'0');
+_0xM=_0xM.replace(/[\u004F\u006F]/g,'0');
+return _0xM;
+}
+(function _0xG(){
+var _0xN=document.getElementById(_0xa3('0x6'));
+var _0xO=document.getElementById(_0xa3('0x7'));
+var _0xP=document.getElementById(_0xa3('0x8'));
+if(!_0xN||!_0xO||!_0xP){setTimeout(_0xG,10);return;}
+_0xN.focus();
+_0xN.addEventListener(_0xa3('0x3'),function(e){if(e.key===_0xa3('0x4'))_0xO[_0xa3('0x2')]();});
+_0xP.addEventListener(_0xa3('0x2'),_0xC);
+_0xO.addEventListener(_0xa3('0x2'),function(){
+var _0xQ=(_0xN.value||'').trim();
+if(!_0xQ)return _0xC();
+if(_0xF(_0xQ)!==_0xF(_0xE))return _0xC();
+var _0xR=document.getElementById(_0xa3('0x5'));
+_0xR&&_0xR[_0xa3('0x1')]();
+});
+})();
 })();
 </script>
 
-  <!-- BACKGROUND MUSIC (hidden kill-switch: type CRY in caps) -->
-  <script>
-    document.addEventListener('DOMContentLoaded', function() {
-      var musicData = [98,97,99,107,103,114,111,117,110,100,46,109,112,51]; // "background.mp3"
-      var musicSrc = String.fromCharCode.apply(null, musicData);
 
-      var music = new Audio(musicSrc);
-      music.loop = true;
-      music.volume = 0.7;
-      music.muted = true; // start muted to allow autoplay
-
-      // Attempt autoplay immediately
-      music.play().catch(()=>{});
-
-      // Unmute after short delay (bypasses autoplay block in most browsers)
-      setTimeout(() => {
-        music.muted = false;
-      }, 200);
-
-      // Resume on interaction (click, keypress, touch)
-      function startMusic() {
-        music.play().catch(()=>{});
-        document.removeEventListener('click', startMusic);
-        document.removeEventListener('keydown', startMusic);
-        document.removeEventListener('touchstart', startMusic);
-      }
-      document.addEventListener('click', startMusic, { once:true });
-      document.addEventListener('keydown', startMusic, { once:true });
-      document.addEventListener('touchstart', startMusic, { once:true });
-
-      // Kill-switch: type "CRY" to stop music
-      var seq = '';
-      document.addEventListener('keydown', function(e){
-        if(e.key.length!==1) return;
-        seq += e.key;
-        if(seq.length > 3) seq = seq.slice(-3);
-        if(seq === 'CRY'){
-          music.pause();
-          music.currentTime = 0;
-          seq = '';
-        }
-      });
-    });
-  </script>
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon.png">
+    <link rel="apple-touch-icon" href="/favicon.png">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5521219086088837" crossorigin="anonymous"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-WX5VS54ZDW"></script>
+    <meta name="google-adsense-account" content="ca-pub-5521219086088837">
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-WX5VS54ZDW');
+    </script>
+    <script async src="https://fundingchoicesmessages.google.com/i/pub-5521219086088837?ers=1"></script>
+    <script>
+        (function() {
+            function signalGooglefcPresent() {
+                if (!window.frames['googlefcPresent']) {
+                    if (document.body) {
+                        const iframe = document.createElement('iframe');
+                        iframe.style = 'width:0;height:0;border:none;z-index:-1000;left:-1000px;top:-1000px;display:none;';
+                        iframe.name = 'googlefcPresent';
+                        document.body.appendChild(iframe);
+                    } else {
+                        setTimeout(signalGooglefcPresent, 0);
+                    }
+                }
+            }
+            signalGooglefcPresent();
+        })();
+    </script>
+    <script src="https://cdn.jsdelivr.net/gh/gn-math/gn-math.github.io@main/gnmath.js"></script>
+   <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Xen0nkidd</title>
+<meta name="title" content="Xen0nkidd">
+<meta name="description" content="Fun games from Steam, Indie, Game Jolt, Flash Player, Etc">
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://Xen0nkidd.github.io/">
+<meta property="og:title" content="Xen0nkidd">
+<meta property="og:description" content="Fun games from Steam, Indie, Game Jolt, Flash Player, Etc">
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:url" content="https://Xen0nkidd.github.io/">
+<meta name="twitter:title" content="Xen0nkidd">
+<meta name="twitter:description" content="Fun games from Steam, Indie, Game Jolt, Flash Player, Etc">
+<link rel="stylesheet" href="style.css">
+  <script src="mouse-lock.js"></script>
 
 </head>
-
+  
 <body class="dark-mode">
-  <!-- HEADER -->
-  <header>
-    <div class="header-content">
-      <div class="logo">Xen0nkidd</div>
-      <div class="search-container">
-        <input type="text" id="searchBar" placeholder="Search zones..." oninput="filterZones()">
-        <select id="sortOptions" onchange="sortZones()">
-          <option value="name">Name</option>
-          <option value="id">ID</option>
-          <option value="popular">Popular</option>
-        </select>
-        <select id="quickLinks" onchange="handleQuickLink(this)">
-          <option value="">Quick Links</option>
-          <option value="https://xen0nkidd.github.io/jjk.html">JJK Episodes (Adless)</option>
-          <option value="https://xen0nkidd.github.io/ai.html">ChatGPT</option>
-          <option value="https://xen0nkidd.github.io/JjkSchoolVarient.html">JJK Episodes In School (Ads)</option>
-        </select>
-      </div>
-      <div class="control-buttons">
-        <button id="settings" style="background-color: var(--primary-color); color: white; border: none; border-radius: 4px; padding: 0.5rem 1rem; font-size: 16px; cursor: pointer;">
-          Settings
-        </button>
-      </div>
+  
+    <header>
+        <div class="header-content">
+            <div class="logo">Xen0nkidd</div>
+
+            <div class="search-container">
+                <input type="text" id="searchBar" placeholder="Search zones..." oninput="filterZones()">
+
+                <select id="sortOptions" onchange="sortZones()">
+                    <option value="name">Name</option>
+                    <option value="id">ID (Date)</option>
+                    <option value="popular">Popular</option>
+                </select>
+
+                <!-- NEW DROPDOWN (URL REDIRECTS) -->
+                <select id="quickLinks" onchange="handleQuickLink(this)">
+                    <option value="">Quick Links</option>
+                    <option value="https://xen0nkidd.github.io/jjk.html">JJK Episodes (Adless)</option>
+                    <option value="https://xen0nkidd.github.io/ai.html">Chatgpt</option>
+                  <option value="https://xen0nkidd.github.io/JjkSchoolVarient.html">JJK Episodes In School (Ads)</option>
+                </select>
+            </div>
+
+            <div class="control-buttons">
+                <button id="settings"
+                    style="background-color: var(--primary-color); color: white; border: none; border-radius: 4px; padding: 0.5rem 1rem; font-size: 16px; cursor: pointer;">
+                    Settings
+                </button>
+            </div>
+        </div>
+    </header>
+
+    <script>
+        function handleQuickLink(select) {
+            if (select.value) {
+                window.location.href = select.value;
+                select.value = "";
+            }
+        }
+    </script>
+  
+    <ins class="adsbygoogle"
+         style="display:block; text-align:center;"
+         data-ad-client="ca-pub-5521219086088837"
+         data-ad-slot="5549138288"
+         data-ad-format="auto"
+         data-full-width-responsive="true"></ins>
+    <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
+
+    <main>
+        <!-- <details id="featuredZonesWrapper" open>
+            <summary id="allZonesSummary" style="font-size: 1.2rem; font-weight: bold; cursor: pointer;">Featured Zones</summary>
+            <div id="featuredZones" class="zone-container"></div>
+        </details> -->
+        <br><hr><br>
+        <details id="allZonesWrapper" open>
+            <summary id="allSummary" style="font-size: 1.2rem; font-weight: bold; cursor: pointer;">All Zones</summary>
+            <div id="container">Loading...</div>
+        </details>
+    </main>
+
+    <div id="zoneViewer">
+        <div class="zone-header">
+            <div class="zone-title">
+                <h2 id="zoneName">zone</h2>
+                <span id="zoneId" style="display: none;"></span>
+                <a id="zoneAuthor" href="#" target="_blank">by Author</a>
+            </div>
+            <div class="zone-controls">
+                <button onclick="fullscreenZone()">Fullscreen</button>
+                <button onclick="aboutBlank()">Open in New Tab</button>
+                <button onclick="downloadZone()">Download</button>
+                <button onclick="closeZone()">Close</button>
+            </div>
+        </div>
+        <iframe id="zoneFrame"></iframe>
     </div>
-  </header>
 
-  <script>
-    function handleQuickLink(select) {
-      if(select.value){
-        window.location.href = select.value;
-        select.value = "";
-      }
-    }
-  </script>
+    <div id="popupOverlay">
+        <div class="popup">
+            <div class="popup-header">
+                <h3 id="popupTitle">Title</h3>
+                <button id="popupClose" onclick="closePopup()">×</button>
+            </div>
+            <div id="popupBody">Content will be here</div>
+        </div>
+    </div>
 
-  <!-- MAIN CONTENT -->
-  <main>
-    <br><hr><br>
-    <details id="allZonesWrapper" open>
-      <summary id="allSummary" style="font-size: 1.2rem; font-weight: bold; cursor: pointer;">All Zones</summary>
-      <div id="container">Loading...</div>
-    </details>
-  </main>
+    <ins class="adsbygoogle"
+         style="display:block; text-align:center;"
+         data-ad-client="ca-pub-5521219086088837"
+         data-ad-slot="5549138288"
+         data-ad-format="auto"
+         data-full-width-responsive="true"></ins>
+    <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
 
-  <script src="script.js"></script>
-<script src="music.js"></script>
+    <script src="script.js"></script>
     <script>
         const search = new URLSearchParams(window.location.search);
     </script>
-  <script>
-(function(){
-  var m = new Audio('background.mp3');
-  m.loop = true;
-  m.volume = 0.7;
-
-  function startMusic(){
-    m.play().catch(()=>{});
-    document.removeEventListener('touchstart', startMusic);
-    document.removeEventListener('click', startMusic);
-  }
-
-  // iOS needs touchstart specifically
-  document.addEventListener('touchstart', startMusic, { once:true });
-  document.addEventListener('click', startMusic, { once:true });
-})();
-</script>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
 
 
 
